# muhenkan-switch-rs

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  dev.ps1  mise.toml
.github/workflows/: check-kanata-update.yml  check-rust-update.yml  release.yml
companion/: Cargo.toml
companion/src/: main.rs
companion/src/commands/: open_folder.rs  timestamp.rs
config/: default.toml
docs/: DESIGN.md  default-config-research.md  design.md  key-design-philosophy.md  snippets-research.md  testing.md  ui-references.md  ux-audit-cli-assumptions.md
kanata/: README.md  muhenkan-macos.kbd  muhenkan.kbd
legacy/: README.md
muhenkan-switch/: Cargo.toml  tauri.conf.json
muhenkan-switch-config/: Cargo.toml
muhenkan-switch-config/src/: lib.rs
muhenkan-switch-core/: Cargo.toml
muhenkan-switch-core/src/: config.rs  main.rs
muhenkan-switch-core/src/commands/: context.rs  dispatch.rs  keys.rs  mod.rs  open_folder.rs  screenshot.rs  search.rs  switch_app.rs  timestamp.rs  toast.rs
muhenkan-switch-gui/: Cargo.toml  tauri.conf.json
muhenkan-switch-gui/capabilities/: default.json
muhenkan-switch-gui/frontend/: help.html  index.html
muhenkan-switch-gui/frontend/src/: main.js
muhenkan-switch-gui/frontend/styles/: main.css
muhenkan-switch-gui/src/: commands.rs  kanata.rs  main.rs  tray.rs
muhenkan-switch/frontend/: help.html  index.html
muhenkan-switch/frontend/src/: main.js
muhenkan-switch/frontend/styles/: main.css
muhenkan-switch/icons/: icon.icns
muhenkan-switch/src/: commands.rs  config.rs  kanata.rs  main.rs  tray.rs
muhenkan-switch/src/commands/: context.rs  keys.rs  mod.rs  open_folder.rs  search.rs  switch_app.rs  timestamp.rs  toast.rs
scripts/: get.ps1  get.sh  install-macos.sh  install.bat  install.ps1  install.sh  sync-kanata-version.sh  uninstall-macos.sh  uninstall.ps1  uninstall.sh  update-macos.sh  update.bat  update.ps1  update.sh
