[package]
name = "muhenkan-switch-config"
version.workspace = true
edition.workspace = true
description = "Shared configuration library for muhenkan-switch"
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
indexmap = { version = "2", features = ["serde"] }
toml = "0.8"
toml_edit = "0.22"
