[package]
name = "muhenkan-switch-core"
version.workspace = true
edition.workspace = true
description = "Companion tool for muhenkan-switch-rs: cross-platform shortcut actions"
license.workspace = true
repository.workspace = true

[[bin]]
name = "muhenkan-switch-core"
path = "src/main.rs"

[dependencies]
muhenkan-switch-config.workspace = true
anyhow.workspace = true
chrono.workspace = true
open.workspace = true
clap = { version = "4", features = ["derive"] }
arboard = { version = "3", features = ["wayland-data-control"] }
webbrowser = "1"
urlencoding = "2"
dirs = "6"

[dev-dependencies]
indexmap = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
