[package]
name = "muhenkan-switch"
version = "2.1.0"
edition = "2021"
description = "Companion tool for muhenkan-switch-rs: cross-platform shortcut actions"
license = "GPL-2.0-only"
repository = "https://github.com/kimushun1101/muhenkan-switch-rs"

[[bin]]
name = "muhenkan-switch"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
arboard = { version = "3", features = ["wayland-data-control"] }
webbrowser = "1"
open = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
urlencoding = "2"
anyhow = "1"
dirs = "6"
