[package]
name = "muhenkan-switch"
version.workspace = true
edition.workspace = true
description = "GUI settings manager for muhenkan-switch"
license.workspace = true
repository.workspace = true

[dependencies]
muhenkan-switch-config.workspace = true
anyhow.workspace = true
serde.workspace = true
chrono.workspace = true
open.workspace = true
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
shared_child = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
